--- a/Index.html
+++ b/Index.html
@@ -61,9 +61,9 @@
                         </p>
                         <h1 class="mb-3">Honda CBR 300R</h1>
                         <p class="feature-section-paragraph">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus laborum totam iure hic
-                            odit, ipsum laudantium earum, nisi obcaecati vitae, error modi? Voluptate amet cupiditate
-                            earum obcaecati rerum, vel deserunt.
+                            Honda CBR 150R 2021 Indonesia can be considered as the most
+                            hyped sports bike of 2021. The bike’s announcement took the biking community by storm.
+                            People had been waiting anxiously for the bike.
                         </p>
                         <button class="btn button-color px-4 py-2" data-bs-toggle="modal"
                             data-bs-target="#exampleModal">
@@ -145,8 +145,9 @@
                         <img width="100%" height="250" src="/images/bike-1.png" class="card-img-top user-img" alt="">
                         <div class="card-body">
                             <h5 class="text-left">Honda FC50</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet
-                                    faucibus sed id nisi lectus at.</p>
+                                <p>The Honda FC50, also known as the Honda Beat, is a 50 cc (3.1 cu in) scooter
+                                    manufactured by
+                                    Honda in 1983. It was produced mainly for the...</p>
                         </div>
                         <button type="button" class="btn button-color" data-bs-toggle="modal"
                             data-bs-target="#staticBackdrop">
@@ -166,8 +167,10 @@
                         <img width="100%" height="250" src="/images/bike-2.png" class="card-img-top user-img" alt="">
                         <div class="card-body">
                             <h3 class="text-left">Motorcycles & Scooters</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus
-                                sed id nisi lectus at..
+                            <p>Safety First! Always obey the rules of the road. Obey all traffic
+                                signals, signs, and laws. Get in the mindset of “driving” your
+                                bike—not just “riding” your bike. This will help you be a more
+                                focused and legally compliant bike rider.
                             </p>
                         </div>
                         <button type="button" class="btn1 button-color" data-bs-toggle="modal"
@@ -189,8 +192,10 @@
                         <img width="100%" height="250" src="/images/bike-3.png" class="card-img-top user-img" alt="">
                         <div class="card-body">
                             <h3 class="text-left">2021 Honda CBR500R</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus
-                                sed id nisi lectus at.</p>
+                            <p>Is it any wonder why the Honda CBR500R is one of our most popular sportbikes? It just
+                                gets so many things right. Price. Power. Weight. Handling. Its twin-cylinder engine revs
+                                freely and produces plenty of torque, and it lets us keep the bike narrow and nimble
+                                too.</p>
                         </div>
                         <button type="button" class="btn1 button-color" data-bs-toggle="modal"
                             data-bs-target="#staticBackdrop">
